tests/errors/first_stage/operation/expected_index/expected_index.am
STR: .string "hi"
mov STR[], r1
